--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="APLICACIÓN PARA LA GESTIÓN DE REUNIONES PARA IES FRANCESC VIDAL I BARRAQUER"
+      content="Aplicació per la gestió de les reunions per l'Institut Francesc Vidal i Barraquer"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>IES FRANCESC VIDAL I BARRAQUER - GESTIÓ DE REUNIONS</title>
+    <title>Institut Francesc Vidal i Barraquer | Aplicació per la gestió de les reunions</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
